fix: wrap flex element
Made the elements in the second section wrap

--- a/style.css
+++ b/style.css
@@ -125,6 +125,7 @@ ul {
     justify-content: center;
     gap: 30px;
     margin-bottom: 100px;
+    flex-wrap: wrap;
   }
 
   /* Style main text */
